# stm-hamt

./: .travis.yml  Makefile  cabal.project  stack.yaml  stm-hamt.cabal
.github/workflows/: ci.yaml
concurrent-insertion-bench/: Main.hs
test/: Main.hs
test/Main/: Gens.hs  Transaction.hs
word-array-tests/: Main.hs
word-array-tests/Main/: Update.hs
