name:
  stm-hamt
version:
  0.2
synopsis:
  STM-specialised Hash Array Mapped Trie
description:
  A low-level data-structure,
  which can be used to implement higher-level interfaces like
  hash-map and hash-set.
  Such implementations are presented by
  <http://hackage.haskell.org/package/stm-containers the "stm-containers" library>.
category:
  Data Structures, STM, Concurrency
homepage:
  https://github.com/nikita-volkov/stm-hamt
bug-reports:
  https://github.com/nikita-volkov/stm-hamt/issues
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/stm-hamt.git


library
  hs-source-dirs:
    library
  other-modules:
    STM.HAMT.Private.Prelude
    STM.HAMT.Private.Indices
    STM.HAMT.Private.WordArray
    STM.HAMT.Private.SizedArray
    STM.HAMT.Private.Level
    STM.HAMT.Private.Nodes
  exposed-modules:
    STM.HAMT.Simple
  build-depends:
    -- data:
    hashable < 2,
    -- control:
    list-t >= 1 && < 2,
    focus >= 0.8 && < 0.9,
    transformers >= 0.3 && < 0.6,
    -- general:
    primitive >= 0.5 && < 0.7,
    base-prelude < 2,
    base < 4.10
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010


test-suite word-array-tests
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    word-array-tests
    library
  main-is:
    Main.hs
  other-modules:
    Main.Update
  build-depends:
    -- testing:
    free >= 4.6 && < 5,
    mtl == 2.*,
    QuickCheck >= 2.6 && < 3,
    HTF == 0.13.*,
    -- data:
    hashable < 1.3,
    -- control:
    list-t,
    focus,
    transformers,
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    primitive,
    mtl-prelude < 3,
    base-prelude,
    base
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010


benchmark concurrent-insertion-bench
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    concurrent-insertion-bench
  main-is:
    Main.hs
  ghc-options:
    -O2 -threaded "-with-rtsopts=-N"
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    criterion == 1.1.*,
    mwc-random == 0.13.*,
    mwc-random-monad == 0.7.*,
    -- data:
    list-t,
    focus,
    stm-hamt,
    -- general:
    free >= 4.5 && < 5,
    async >= 2.0 && < 2.2,
    rebase < 2
