name:
  stm-hamt
version:
  0.1
synopsis:
  STM-specialised Hash Array Mapped Trie
description:
  A low-level data-structure,
  which can be used to implement higher-level interfaces like
  hash-map and hash-set.
  Such implementations are presented by
  <http://hackage.haskell.org/package/stm-containers the "stm-containers" library>.
category:
  Data Structures, STM, Concurrency
homepage:
  https://github.com/nikita-volkov/stm-hamt
bug-reports:
  https://github.com/nikita-volkov/stm-hamt/issues
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/stm-hamt.git

library
  hs-source-dirs:
    library
  exposed-modules:
    StmHamt.Hamt
    StmHamt.SizedHamt
  other-modules:
    StmHamt.Accessors.Hash
    StmHamt.Accessors.Indices
    StmHamt.Accessors.SmallArray
    StmHamt.Accessors.SparseSmallArray
    StmHamt.Constructors.Branch
    StmHamt.Constructors.Hash
    StmHamt.Constructors.Indices
    StmHamt.Constructors.SmallArray
    StmHamt.Constructors.SparseSmallArray
    StmHamt.Focuses
    StmHamt.Instances
    StmHamt.Prelude
    StmHamt.Types
    StmHamt.UnfoldMs
    StmHamt.UnfoldMs.SmallArray
    StmHamt.UnfoldMs.SparseSmallArray
    StmHamt.Unfolds.Indices
    StmHamt.Unfolds.SparseSmallArray
  build-depends:
    base >=4.6 && <5,
    deferred-folds >=0.6.2 && <0.7,
    focus >=0.11.2 && <0.12,
    hashable <2,
    list-t >=1 && <2,
    primitive >=0.6.4 && <0.7,
    primitive-extras >=0.3.0.1 && <0.4,
    transformers >=0.3 && <0.6
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
